kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-frontend
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nuxt-frontend
  template:
    metadata:
      labels:
        app: nuxt-frontend
    spec:
      containers:
        - name: nuxt-frontend
          image: antonin187/mspr-bloc-2-frontend:latest  # Remplace ici
          ports:
            - containerPort: 80
