kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-frontend
  namespace: frontend
spec:
  selector:
    app: nuxt-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
